# julyfinal.github.io

./: README.md  pyproject.toml
docs/: 00-save_list.md  01-arch_setup.md  03-wayland_in_arch_research.md  04-install_list.md  04-linux_issus.md  05-movie_list.md  06-life.md  09-nix_note.md  09-python_note.md  10-booklist.md  README.md  _sidebar.md  bookmarks.md  generator.py  index.html
docs/archive/: FavoritesAPP.md  README.md  booklist.md  bookmark.csv  bookmark.md  bookmark.py  save_list.md
docs/archive/Essay/: 20220901_aboutShapeUp.md
docs/archive/anime/: gundam.md
docs/notebook/: README.md.md  WriteAndShare.md  booklist.md  bookmark.md  think.md
docs/notebook/DataScience/: Coursea.md
docs/notebook/English/: 定冠词.md
docs/notebook/Linux/: 20220831_archlinux_in_docker.md  ArchSetup.md  ArchWSL_Setup.md  LinuxISSUS.md
docs/notebook/mine/: want.md  感情.txt
docs/python_notes/: 00-python_install.md  01-db.md
docs/study/: txt2epub.md
docs/study/Linux/: ArchLinuxInDocker.md  ArchWSL_Setup.md  BuildTheSmallestDockerImage.md  WaylandInArchResearch.md  cuda.md
docs/think/: README.md  better.md  note.md  read.md  think.md  to_watch_list.md
docs/think/mine/: life.md  save list.txt  五笔.txt  复盘.txt  复胖.txt  宫崎骏电影.md  宫崎骏电影.txt  富兰克林表格法.md  富兰克林表格法.txt  感情.md  提高效率的声音.txt  读书法.txt
src/julyfinal_github_io/: __init__.py
